[package]
name = "rs-typed-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.either]
version = "1.9.0"
default-features = false

[dependencies.once_cell]
version = "1.19.0"
default-features = false
features = ["critical-section"]

[dependencies.regex]
version = "1.10.3"
default-features = false
features = ["perf", "unicode"]

[features]
default = ["std"]
std = ["regex/std", "once_cell/std"]
