[package]
name = "gramma"
version = "0.2.1"
edition = "2021"
description = "Generate a scannerless parser by declaring types."
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.either]
version = "1.9.0"
default-features = false

[dependencies.once_cell]
version = "1.19.0"
default-features = false
features = ["critical-section"]

[dependencies.regex]
version = "1.10.3"
default-features = false
features = ["perf", "unicode"]

[features]
default = ["std"]
std = ["regex/std", "once_cell/std"]
