[package]
name = "gramma"
version = "0.2.14"
edition = "2021"
description = "Generate a scannerless parser by declaring types."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.either]
version = "1.9.0"
default-features = false

[dependencies.once_cell]
version = "1.19.0"
optional = true
default-features = false
features = ["alloc"]

[dependencies.regex]
version = "1.10.3"
optional = true
default-features = false
features = ["perf", "unicode"]

[dependencies.smallvec]
version = "1.13.2"
default-features = false
features = ["const_generics", "union"]

[features]
default = ["std", "regex"]
std = ["regex/std", "once_cell/std"]
regex = ["dep:regex", "dep:once_cell"]
